--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "motion-ui": "^2.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^1.1.5",
