--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-EXPORT GOOGLE_CLIENT_ID = 969347518634-jn77077986n6difsi9vpt6r7us8lsjpf.apps.googleusercontent.com
+REACT_APP_GOOGLE_CLIENT_KEY = 969347518634-jn77077986n6difsi9vpt6r7us8lsjpf.apps.googleusercontent.com;
